<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="port">8090</string>
    <string name="server_ip">172.36.2.47</string>
    <string name="localhost_ip" translatable="false">127.0.0.1</string>
    <string name="emu_ip">10.0.3.2</string>
    <!--
    <string name="emu_ip">10.11.12.72</string>
-->
    <string name="test">Т</string>
    <string name="api_addresses_load">/addresses/only_address</string>
    <string name="api_inventory_by_address_load">/inventory/address/</string>
    <string name="api_room_by_address_load">/addresses/rooms/</string>
    <string name="api_full_inventory_from_equipments">/equipments/inventory_num/full/</string>
    <string name="api_login_check" translatable="false">/users/login</string>


    <string name="app_name" translatable="false">PFU Inventory</string>
    <string name="add_user">Додати коритсувача</string>
    <string name="all">Все</string>
    <string name="sync">Синхронізувати</string>
    <string name="next">Далі</string>
    <string name="password">Ваш пароль</string>
    <string name="email">Email адреса</string>
    <string name="name">Ім\'я</string>
    <string name="del">Видалити</string>
    <string name="equipments">Тест</string>
    <string name="message">Повідомлення</string>
    <string name="scan_message">Розташуйте QR-код у середині квадрату</string>
    <string name="scan">Сканувати</string>
    <string name="create_qr">Створити QR-код из даних</string>
    <string name="Formulyar">Формуляр</string>
    <string name="Inventory">Інвентарізация</string>
    <string name="Profile">Профіль</string>
    <string name="ScanQR">Сканувати QR-code</string>
    <string name="select_address">Виберіть адресу</string>
    <string name="select_room">Виберіть кімнату</string>
    <string name="start">ПОЧАТИ</string>
    <string name="listLabel">Кімната</string>
    <string name="equipment_name">Назва обладнання, дуже довга назва обладнання</string>
    <string name="inventory_number">Інвентарний номер</string>
    <string name="id">Id</string>
    <string name="type">Тип</string>
    <string name="ok">Ок</string>
    <string name="cancel">Відмінити</string>
    <string name="inventory_scan_result">Результат \nсканування</string>

    <string name="item_info">Повна інформація</string>
    <string name="delete_from_list">Видалити зі списку</string>
    <string name="back">Назад</string>
    <string name="choose_action">Оберіть дію</string>
    <string name="Lorem_ipsum">Morbi rutrum nulla id orci feugiat viverra. Praesent maximus sed lorem sed porta. Nullam
        porttitor ornare lacus vel auctor. Phasellus eu cursus ipsum, eu lacinia dolor. Aenean finibus dui vel nunc
        tincidunt varius sit amet sed urna. Phasellus vulputate dui eu dui molestie, consequat eleifend nibh imperdiet.
        Aliquam imperdiet, tellus ac congue commodo, tortor mi scelerisque lorem, non accumsan sapien ex et erat. Sed
        cursus pretium mattis.
    </string>
    <string name="mission_was_canceled">Велика миссія була відмінена!</string>
    <string name="main_menu">Головне меню</string>
    <string name="choose_address_n_room">Оберіть адресу и кімнату!</string>
    <string name="address">Адреса</string>
    <string name="room">Кімната</string>
    <string name="to_scan">Сканувати</string>
    <string name="done_loading">Завантяження завершене</string>
    <string name="done_all">Все завантажено</string>
    <string name="quit_to_the_main_msg">Вийти на головну сторінку?</string>
    <string name="quit_room_msg">Вийти з кімнати?</string>
    <string name="serial_number">Серійний номер</string>
    <string name="additional_params">Додаткові параметры</string>
    <string name="current_user">Поточний коричтувач</string>
    <string name="tech_platform">Технічна платформа</string>


    <string name="room_number">Кімната №</string>
    <string name="equipment_already_scanned">Обладнання з номером %1$s вжe сканувалося</string>
    <string name="equipment_in_the_other_room">Обладнання знайдено в інший кімнаті</string>
    <string name="equipment_not_found">Обладнання з номером не знайдено!</string>
    <string name="log_in">Вхід</string>
    <string name="sign_up">Реєстрація</string>
    <!--    <string name="email_example" translatable="false">example@gmail.com</string>
    <string name="password_example" translatable="false">8-16 max</string>-->
    <string name="toast_enter_email">Введіть email!</string>
    <string name="toast_enter_password">Введіть пароль!</string>
    <string name="ok_loading">Завантажую профіль…</string>
    <string name="bad_request">Неправильний запит, помилка синтаксису!</string>
    <string name="server_error">Помилка на сервері!</string>
    <string name="request_timeout">Немає з\'єднання з сервером!</string>
    <string name="connection_error">Помилка підключення!</string>
    <string name="try_again">Спробуйте ще раз.</string>
    <string name="log_out">Вихід</string>
    <string name="to_log_in">УВІЙТИ</string>
    <string name="error_validation_email">Email введено з помилкою</string>
    <string name="error_validation_password">Занадто короткий пароль</string>
    <string name="profile">Профіль</string>
    <string name="no_data_about_user">Даних по користувачеві не знайдено!</string>
    <string name="remote_desktop">Віддалене \n робоче місце</string>
    <string name="not_found">Не знайдено!</string>
    <string name="exit">Bихід</string>
    <string name="home">На головну</string>
    <string name="finish">Завершити</string>
    <string name="no_storage_write_permission">Нема дозволу для запису у файл! Неможливо зберегти сессію</string>
    <string name="finish_and_save">Завершити та зберегти результат у файл?</string>
    <string name="already_scanned_title">Вже відскановано</string>
    <string name="other_room_title">В іншій кімнаті</string>
    <string name="not_found_title">Не знайдено</string>
    <string name="found_title">Знайдено</string>
    <string name="result_title">Результат</string>
    <string name="saved">Збережено</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="restore_previous_session">Відновити минулу сесію</string>
    <string name="send_file_to_server">Відправити дані на сервер</string>
    <string name="personal_data">Персональні дані</string>
    <string name="workplace">Посада</string>
    <string name="phone">Телефон</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="stay">Лишитись</string>
    <string name="show_full_info">Показати повну інформацію по обладнанню?</string>
    <string name="turn_off_flashlight">Вимкнути спалах</string>
    <string name="turn_on_flashlight">Увімкнути спалах</string>
    <string name="scan_canceled">Сканування відмінено</string>
    <string name="no_permission_for_camera_use">Немає дозволу на використання камери!</string>
    <string name="info">Інформація</string>
    <string name="plain_info">Вітаємо у додатку PFU Inventory!
        \nТут буде розташована інформація та відповіді на
        запитання. \nПриємного користування!
    </string>
    <string name="load_error_try_again">Помилка при завантаженні сторінки. Спробуйте ще раз.</string>

</resources>
