<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="bottom" >

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_gravity="center" android:layout_marginRight="30dp" android:layout_marginLeft="30dp"
                      android:layout_weight="2">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btn_home"
                       android:src="@drawable/ic_home" android:layout_margin="10dp"
                       android:layout_gravity="start" />

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/btn_scan_qr"
                       android:src="@drawable/ic_qr_code" android:layout_margin="10dp"
                       android:layout_gravity="center" android:layout_weight="20"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/btn_finish_inventory"
                       android:src="@drawable/ic_outline_assignment_turned_in_24px" android:layout_margin="10dp"
                       android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_gravity="center" android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp" android:layout_weight="1">


            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home"
                      android:id="@+id/textView" android:layout_gravity="center"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/scan" android:textAlignment="center" android:layout_gravity="center"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/finish" android:textAlignment="center" android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
