<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" android:weightSum="1">

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="5dp"
            tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" android:id="@+id/textView" android:layout_weight="1">
        </TextView>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/etName" android:layout_weight="1"/>
        <requestFocus android:layout_weight="1">
        </requestFocus>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" android:id="@+id/tvPassword" android:layout_weight="1">
        </TextView>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/etPassword" android:layout_weight="1" android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/linearLayout2" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout2">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" android:id="@+id/tvEmail" android:layout_weight="1">
        </TextView>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/etEmail" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/linearLayout3" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout3">
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_user">
        </Button>

        <Button
                android:id="@+id/btnSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync">
        </Button>
        <Button
                android:id="@+id/btnAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all">
        </Button>
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:visibility="invisible"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/linearLayout4" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout4"/>
</android.support.constraint.ConstraintLayout>