<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lis.qr_client.activity.InventoryParamSelectActivity">


    <Spinner
            android:layout_width="326dp"
            android:layout_height="26dp"
            android:id="@+id/spinAddress"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="146dp"
            android:layout_marginLeft="29dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="29dp"/>
    <Spinner
            android:layout_width="326dp"
            android:layout_height="26dp"
            android:id="@+id/spinRoom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="29dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="29dp"/>

    <TextView
            android:text="@string/select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectAdr"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/spinAddress" android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/spinAddress"/>
    <TextView
            android:text="@string/select_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectRoom"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/spinRoom" android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/spinRoom"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="115dp" android:layout_marginLeft="148dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="148dp"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>
