<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lis.qr_client.activity.SyncActivity">
    <TextView
            android:text="Users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsersTitle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="159dp"
            app:layout_constraintLeft_toLeftOf="parent" android:textSize="26sp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserName"
            android:layout_marginRight="57dp"
            app:layout_constraintRight_toRightOf="@+id/tvUsersTitle"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsersTitle" android:textSize="20sp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserEmail"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/tvUserName" android:textSize="20sp"/>

    <Button android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:id="@+id/btnNext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="207dp"/>

    <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del">
    </Button>

    <Button
            android:id="@+id/btnTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btnNext" android:layout_marginLeft="-39dp"
            app:layout_constraintLeft_toLeftOf="@+id/btnNext">
    </Button>


</android.support.constraint.ConstraintLayout>
