<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:background="@color/colorLightGrey"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lis.qr_client.activity.WelcomeActivity" tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="0dp">


    <TextView
            android:text="@string/app_name"
            android:layout_width="396dp"
            android:layout_height="79dp"
            android:id="@+id/tv_app_name" android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorWhite" android:padding="@dimen/button_padding"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="7dp" android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center" tools:layout_editor_absoluteX="-12dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="187dp"
            android:layout_height="181dp"
            android:id="@+id/pb_welcome"
            android:visibility="invisible" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="193dp" android:layout_marginLeft="16dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"/>


    <Button
            android:text="@string/log_in"
            android:layout_width="119dp"
            android:layout_height="72dp" android:id="@+id/btn_log_in"
            android:background="@drawable/drawable_btn_ripple" android:padding="@dimen/button_padding"
            android:textColor="@color/colorDark"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="193dp"
            android:textSize="16sp"/>

    <Button
            android:text="@string/sign_up"
            android:layout_width="138dp"
            android:layout_height="76dp" android:id="@+id/btn_sign_up"
            android:background="@drawable/drawable_btn_ripple" android:padding="@dimen/button_padding"
            android:textColor="@color/colorDark"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="193dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_log_in"
            app:layout_constraintVertical_bias="1.0" android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>
